# ESN-unofficial

./: .gitignore  CLEANUP_PLAN.md  COMPLETATO_SUMMARY.md  ESN-unofficial.code-workspace  GUIDA_ESN_SPIEGAZIONE.md  LICENSE  PROJECTDESC.md  README.md  RIASSUNTO_NUOVI_SCRIPT.md  RISPOSTA_CRITICHE_RICCARDO.md  SLITHER_ESN_README.md  TRAINING_RESULTS.txt  WEBSOCKET_SERVER_GUIDE.md  best_config_binary_search.json  brain_connectome_reservoir.py  brain_connectome_reservoir_v0_1.py  change_single_reservoir.ipynb  compare_reservoirs.py  configuration.py  connectome_networks.ipynb  continuous_network.ipynb  debug_esn_output.py  debug_player_inputs.py  environment.yml  esn_with_gaussian.ipynb  finetune_esn.py  gaussian_trial.ipynb  handson_erdos_renyi.ipynb  handson_fully_connected.ipynb  handson_gaussian.ipynb  handson_tutorial.ipynb  humand_data.ipynb  humand_data_1015.ipynb  humand_data_1015_fixed.ipynb  humand_data_1015_slither_copy_use_brain_connectome_reservoir_executed.ipynb  hyperparameter_grid_focused.py  hyperparameter_search.py  hyperparameter_search_binary.py  lorenz_data.csv  lorenz_data.ipynb  (+22 more)
docs/: CONTINUOUS_LEARNING_DESIGN.md  HANDOFF.md  METHODOLOGY.md  REFERENCES.md  REVIEW.md
examples/: 01_esn_tutorial_iris.ipynb  02_connectome_iris.ipynb  03_slither_pipeline.ipynb  04_continuous_time_dynamics.ipynb  05_online_learning.ipynb  06_continual_benchmark.ipynb  07_null_model_baseline.ipynb  combined_examples.ipynb
notebooks/: continuous_network.ipynb  esn_with_gaussian.ipynb  handson_erdos_renyi.ipynb  handson_fully_connected.ipynb  handson_gaussian.ipynb  handson_tutorial.ipynb  humand_data.ipynb  humand_data_1015.ipynb  humand_data_1015_fixed.ipynb  lorenz_data.ipynb  networks_in_function_J.ipynb  reference_networks.ipynb  test_reservoirs.ipynb
reservoir_configs/: best_config_focused_grid.json
reservoirs/: ErdosRenyi.py  FixedRing.py  FullyConnected.py  Gaussian.py  NonResettingFullyConnected.py  __init__.py  _batch.py  _spectral.py  baselines.py  brain_connectome_reservoir.py  brain_connectome_reservoir_v0_1.py  connectome.py  nulls.py  random.py  tasks.py  tuning.py
scripts/: compare_reservoirs.py  finetune_esn.py  generate_paper_figures.py  hyperparameter_grid_focused.py  hyperparameter_search.py  hyperparameter_search_binary.py  local_ci.py  mackey_glass_ablations.py  mackey_glass_benchmark.py  mackey_glass_hp_sweep.py  regenerate_legacy_mg_figures.py  run_slither_connectome_sweep.py  select_top_sessions.py
slither/: __init__.py  config.py  data.py  metrics.py  mock.py
test_particolari/: network_architectures.ipynb  networks_in_J_no_average.ipynb
tests/: README.md  _characterization_common.py  regen_goldens.py  test_baselines.py  test_batch.py  test_characterization.py  test_cl_integration.py  test_cl_metrics.py  test_conceptors.py  test_connectome_validation.py  test_continual_benchmark.py  test_engines_iris.py  test_guards.py  test_legacy_old_engine.py  test_nulls.py  test_online_readout.py  test_smoke.py  test_tasks.py  test_tuning.py
(+6522 files in other folders)
